default page to home page; add quickmarks to home page

--- a/config/qutebrowser/home_page.html
+++ b/config/qutebrowser/home_page.html
@@ -1,1 +1,35 @@
-<p> Home Page </p>
+<!DOCTYPE html>
+<html>
+<head>
+<style>
+body {
+	color: #dfdfdf;
+	background-color: #222;
+}
+</style>
+</head>
+<div>
+	<table style="width:50%">
+		<tr>
+			<th>Quickmark</th>
+			<th>Page</th>
+		</tr>
+		<tr>
+			<td>aw</td>
+			<td>Arch Linux</td>
+		</tr>
+		<tr>
+			<td>w</td>
+			<td>Wikipedia</td>
+		</tr>
+		<tr>
+			<td>dic</td>
+			<td>Merriam Webster</td>
+		</tr>
+		<tr>
+			<td>yt</td>
+			<td>YouTube</td>
+		</tr>
+	</table>
+</div>
+</html>
