remove crap text

--- a/config/qutebrowser/home_page.html
+++ b/config/qutebrowser/home_page.html
@@ -47,8 +47,7 @@ body {
 
 	<div class="column">
 		<div>
-			<iframe src="https://www.merriam-webster.com/word-of-the-day"" height="650">
-				Alternative text for browsers that do not understand IFrames.
+			<iframe src="https://www.merriam-webster.com/word-of-the-day" height="650">
 			</iframe>
 		</div>
 	</div>
