strava on home page

--- a/config/qutebrowser/home_page.html
+++ b/config/qutebrowser/home_page.html
@@ -47,8 +47,9 @@ body {
 
 	<div class="column">
 		<div>
-			<iframe src="https://www.merriam-webster.com/word-of-the-day" height="650">
-			</iframe>
+			<iframe src="https://www.merriam-webster.com/word-of-the-day" height="650"> </iframe>
+			<iframe height='454' width='300' frameborder='0' allowtransparency='true' scrolling='no' src='https://www.strava.com/athletes/46528216/latest-rides/818bdf5fb0d41ec03791b20b3ee59d8bf7466d12'> </iframe>
+			<iframe height='160' width='300' frameborder='0' allowtransparency='true' scrolling='no' src='https://www.strava.com/athletes/46528216/activity-summary/818bdf5fb0d41ec03791b20b3ee59d8bf7466d12'> </iframe>
 		</div>
 	</div>
 
