adding amazon quickmark

--- a/config/qutebrowser/home_page.html
+++ b/config/qutebrowser/home_page.html
@@ -42,6 +42,10 @@ body {
 				<td>yt</td>
 				<td>YouTube</td>
 			</tr>
+			<tr>
+				<td>a</td>
+				<td>Amazon</td>
+			</tr>
 		</table>
 	</div>
 
